<resources>
    <string name="app_name">PD1</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="play_pvc">Play PVC</string>
    <string name="play_pvp">Play PVP</string>
    <string name="first_player_name">First Player Name</string>
    <string name="play">Play!</string>
    <string name="second_player_name">Second Player Name</string>
    <string name="restart">Restart?</string>
</resources>