<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/tic_tac_toe"
        android:textColor="#404040"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/pvp_btn"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="#E91E63"
        android:padding="8dp"
        android:text="@string/play_pvp" />

    <Button
        android:id="@+id/pvc_btn"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="#E91E63"
        android:padding="8dp"
        android:text="@string/play_pvc" />



</LinearLayout>