<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".GameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:padding="15dp"
        android:text="@string/tic_tac_toe"
        android:textColor="#404040"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/CurrentPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/first_player_name"
        android:textSize="22sp" />

    <GridLayout
        android:paddingTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3">

        <Button
            android:id="@+id/btn_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#E91E63"
            android:tag="0"
            android:textSize="60sp"
            tools:text="X" />
        <Button
            android:id="@+id/btn_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#E91E63"
            android:tag="1"
            android:textSize="60sp"
            tools:text="X" />
        <Button
            android:id="@+id/btn_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#E91E63"
            android:tag="2"
            android:textSize="60sp"
            tools:text="X" />
        <Button
            android:id="@+id/btn_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#E91E63"
            android:tag="3"
            android:textSize="60sp"
            tools:text="X" />
        <Button
            android:id="@+id/btn_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#E91E63"
            android:tag="4"
            android:textSize="60sp"
            tools:text="X" />
        <Button
            android:id="@+id/btn_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#E91E63"
            android:tag="5"
            android:textSize="60sp"
            tools:text="X" />
        <Button
            android:id="@+id/btn_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#E91E63"
            android:tag="6"
            android:textSize="60sp"
            tools:text="X" />
        <Button
            android:id="@+id/btn_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#E91E63"
            android:tag="7"
            android:textSize="60sp"
            tools:text="X" />
        <Button
            android:id="@+id/btn_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#E91E63"
            android:tag="8"
            android:textSize="60sp"
            tools:text="X" />
    </GridLayout>

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="#E91E63"
        android:gravity="center_horizontal"
        android:text="@string/restart"
        android:visibility="gone"
        android:textSize="30sp" />


</LinearLayout>